# wacks

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  mise.toml
.github/workflows/: ci.yml
src/: builder.rs  capture.rs  delta.rs  demangle.rs  format.rs  frame.rs  framemap.rs  framemap_gen.rs  lib.rs  namesec.rs  parse.rs  sourcemap.rs  sourcemap_gen.rs  wire.rs
tests/: sourcemap_gen.rs  wasm2map.rs
tests/e2e/: debug.spec.ts  package-lock.json  package.json  playwright.config.ts  server.mjs  stacktrace.spec.ts  tsconfig.json
tests/e2e/fixture/: Cargo.toml
tests/e2e/fixture/src/: lib.rs
tests/e2e/static/: index.html
