[package]
name = "wacks"
version = "0.1.0"
edition = "2024"
description = "Structured WASM panic stack traces for browsers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yawn/wacks"
readme = "README.md"
keywords = ["wasm", "panic", "stacktrace", "debugging", "wasm-bindgen"]
categories = ["wasm", "development-tools::debugging"]

[dependencies]
anyhow = { version = "1", optional = true }
cfg-if = "1"
gimli = { version = "0.33", optional = true }
leb128 = { version = "0.2", optional = true }
object = { version = "0.38", default-features = false, features = ["read_core", "wasm"], optional = true }
rustc-demangle = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
vlq = { version = "0.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
default = []
name-section = ["dep:leb128"]
serde = ["dep:serde"]
source-map = ["dep:serde_json", "dep:vlq"]
source-map-gen = ["dep:anyhow", "dep:clap", "dep:gimli", "dep:leb128", "dep:object", "dep:serde_json", "dep:vlq"]

[dev-dependencies]
serde_json = "1"

[[bin]]
name = "wasm2map"
required-features = ["source-map-gen"]
