[package]
name = "wacks"
version = "0.1.0"
edition = "2024"
description = "Structured WASM panic stack traces for browsers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yawn/wacks"
readme = "README.md"
keywords = ["wasm", "panic", "stacktrace", "debugging", "wasm-bindgen"]
categories = ["wasm", "development-tools::debugging"]

[dependencies]
anyhow = { version = "1", optional = true }
cfg-if = "1"
clap = { version = "4", features = ["derive"], optional = true }
gimli = { version = "0.33", optional = true }
leb128 = "0.2"
object = { version = "0.39", default-features = false, features = ["read_core", "wasm"], optional = true }
postcard = { version = "1", features = ["alloc"], optional = true }
rustc-demangle = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
vlq = { version = "0.5", optional = true }
wasmparser = { version = "0.229", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"

[features]
default = []
serde = ["dep:serde"]
framemap-gen = ["dep:anyhow", "dep:clap", "dep:postcard", "dep:serde", "dep:wasmparser"]
sourcemap-gen = ["dep:anyhow", "dep:clap", "dep:gimli", "dep:object", "dep:serde_json", "dep:vlq"]

[dev-dependencies]
serde_json = "1"

[[bin]]
name = "framemap-gen"
path = "src/bin/framemap_gen.rs"
required-features = ["framemap-gen"]

[[bin]]
name = "sourcemap-gen"
path = "src/bin/sourcemap_gen.rs"
required-features = ["sourcemap-gen"]
