[package]
name = "wacks-test-fixture"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
wacks = { path = "../../..", features = ["serde"] }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "-g"]

[profile.release]
strip = "none"
