[package]
name = "wacks-test-fixture"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
wacks = { path = "../../..", features = ["serde", "name-section", "source-map"] }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
dwarf-debug-info = true

[profile.release]
debug = "line-tables-only"
strip = "none"
